new webapp style. Done some cleaning

--- a/app/fakt-news/src/stylesheets/style.css
+++ b/app/fakt-news/src/stylesheets/style.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* Overriding of Bootstrap default Jumbotron */
+.jumbotron {
+  background-image: url("/Users/lorenzotabasso/Desktop/University/MODSEM/modsem2021-faktnews/app/fakt-news/src/assets/img/gettyimages-1271101758-2048x2048.jpg");
+  background-position: center;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
