--- a/app/fakt-news/src/stylesheets/style.css
+++ b/app/fakt-news/src/stylesheets/style.css
@@ -13,10 +13,10 @@ code {
 }
 
 /* Overriding of Bootstrap default Jumbotron */
-.jumbotron {
+/* .jumbotron {
   background-image: url("../assets/img/gettyimages-1271101758-home.jpg");
   background-position: center;
   height: 500px;
   background-repeat: no-repeat;
   background-size: auto;
-}
+} */
